[package]
name = "search_path"
description = "Provides a very simple search path file finder."
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
version = "0.1.3"
edition = "2018"
documentation = "https://docs.rs/search_path/"
repository = "https://github.com/johnstonskj/rust-search_path.git"
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
